unpackaged/objects/OTAHistory__c.object
<CustomObject>
    <fields>
        <fullName>CarryCost__c</fullName>
        <label>携行品損害</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DamagesCost__c</fullName>
        <label>賠償金額</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DiseaseCost__c</fullName>
        <label>疾病治療費用</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DiseaseDeathCost__c</fullName>
        <label>疾病死亡</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HomeCountryCoverage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>一時帰国中担保</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InjuryCost__c</fullName>
        <label>傷害治療費用</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>InjuryDeathCost__c</fullName>
        <label>傷害死亡・後遺障害</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>InsuranceCurrency__c</fullName>
        <label>保険金額通貨</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>JPY（単位：千円）</fullName>
                </value>
                <value>
                    <fullName>RMB</fullName>
                </value>
                <value>
                    <fullName>HKD</fullName>
                </value>
                <value>
                    <fullName>VND</fullName>
                </value>
                <value>
                    <fullName>USD</fullName>
                </value>
                <value>
                    <fullName>その他</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>InsuranceKind__c</fullName>
        <label>保険種類</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>安心生活</fullName>
                </value>
                <value>
                    <fullName>安心NHST</fullName>
                </value>
                <value>
                    <fullName>駐在中国</fullName>
                </value>
                <value>
                    <fullName>優You</fullName>
                </value>
                <value>
                    <fullName>チャイナボウル</fullName>
                </value>
                <value>
                    <fullName>Medi-X</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>InsurancePlan__c</fullName>
        <label>保険プラン</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
                <value>
                    <fullName>G</fullName>
                </value>
                <value>
                    <fullName>H</fullName>
                </value>
                <value>
                    <fullName>I</fullName>
                </value>
                <value>
                    <fullName>S</fullName>
                </value>
                <value>
                    <fullName>T</fullName>
                </value>
                <value>
                    <fullName>U</fullName>
                </value>
                <value>
                    <fullName>SA</fullName>
                </value>
                <value>
                    <fullName>SB</fullName>
                </value>
                <value>
                    <fullName>SC</fullName>
                </value>
                <value>
                    <fullName>SD</fullName>
                </value>
                <value>
                    <fullName>AA</fullName>
                </value>
                <value>
                    <fullName>BB</fullName>
                </value>
                <value>
                    <fullName>CC</fullName>
                </value>
                <value>
                    <fullName>DD</fullName>
                </value>
                <value>
                    <fullName>X</fullName>
                </value>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>新A</fullName>
                </value>
                <value>
                    <fullName>新B</fullName>
                </value>
                <value>
                    <fullName>新C</fullName>
                </value>
                <value>
                    <fullName>新D</fullName>
                </value>
                <value>
                    <fullName>新E</fullName>
                </value>
                <value>
                    <fullName>新F</fullName>
                </value>
                <value>
                    <fullName>新G</fullName>
                </value>
                <value>
                    <fullName>新H</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Issues_To_AC__c</fullName>
        <label>AC用伝達事項</label>
        <length>384</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Issues_from_Sales__c</fullName>
        <label>営業→AC伝達事項</label>
        <length>384</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MedicalBillKessaiHouhou__c</fullName>
        <label>医療費決済方法</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>海外旅行傷害保険</fullName>
                </value>
                <value>
                    <fullName>現金</fullName>
                </value>
                <value>
                    <fullName>クレジットカード付帯保険</fullName>
                </value>
                <value>
                    <fullName>会社積立</fullName>
                </value>
                <value>
                    <fullName>旅行総合保険</fullName>
                </value>
                <value>
                    <fullName>立て替え保証</fullName>
                </value>
                <value>
                    <fullName>未確認</fullName>
                </value>
                <value>
                    <fullName>中国医療傷害保険</fullName>
                </value>
                <value>
                    <fullName>その他</fullName>
                </value>
                <value>
                    <fullName>ベトナム医療傷害保険</fullName>
                </value>
                <value>
                    <fullName>Health Care Program</fullName>
                </value>
                <value>
                    <fullName>Medi-X</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MemberFamilyName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>会員（家族）名称</label>
        <referenceTo>FamilyInfo__c</referenceTo>
        <relationshipLabel>保険履歴</relationshipLabel>
        <relationshipName>R00N10000000aHCpEAM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MemberName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>会員名称</label>
        <referenceTo>MemberInfo__c</referenceTo>
        <relationshipLabel>保険履歴</relationshipLabel>
        <relationshipName>R00N10000000aHCfEAM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MemberNo__c</fullName>
        <formula>IF ( MemberName__c  &lt;&gt; &quot;&quot;,  MemberName__r.MemberNo__c ,  MemberFamilyName__r.MemberNo__c )</formula>
        <label>会員番号</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OldCarryCost__c</fullName>
        <label>旧携行品損害</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OldDamagesCost__c</fullName>
        <label>旧賠償金額</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OldDiseaseCost__c</fullName>
        <label>旧疾病治療費用</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OldDiseaseDeathCost__c</fullName>
        <label>旧疾病死亡</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OldInjuryCost__c</fullName>
        <label>旧傷害治療費用</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OldInjuryDeathCost__c</fullName>
        <label>旧傷害死亡・後遺障害</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OldOtaInsuranceShiki__c</fullName>
        <label>旧保険始期</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OldOtaInsuranceShuki__c</fullName>
        <label>旧保険満期</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OldRescueCost__c</fullName>
        <label>旧救援者費用</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OldTreatmentCost__c</fullName>
        <label>旧治療費用</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OldTreatmentRescueCost__c</fullName>
        <label>旧治療・救援者費用</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtaAgency__c</fullName>
        <label>取扱</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>WB扱い</fullName>
                </value>
                <value>
                    <fullName>WB以外</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OtaInsuranceShiki__c</fullName>
        <label>保険始期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OtaInsuranceShuki__c</fullName>
        <label>保険満期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OtaKeepPlace__c</fullName>
        <label>保管場所</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtaName__c</fullName>
        <label>OTA保険会社名称</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>未確認</fullName>
                </value>
                <value>
                    <fullName>保険なし</fullName>
                </value>
                <value>
                    <fullName>AIU保険会社</fullName>
                </value>
                <value>
                    <fullName>JI傷害火災保険株式会社</fullName>
                </value>
                <value>
                    <fullName>東京海上日動火災保険株式会社</fullName>
                </value>
                <value>
                    <fullName>富士火災海上保険株式会社</fullName>
                </value>
                <value>
                    <fullName>日新火災海上保険株式会社</fullName>
                </value>
                <value>
                    <fullName>朝日火災海上保険株式会社</fullName>
                </value>
                <value>
                    <fullName>共栄火災海上保険株式会社</fullName>
                </value>
                <value>
                    <fullName>セゾン自動車火災保険株式会社</fullName>
                </value>
                <value>
                    <fullName>セコム損害保険株式会社</fullName>
                </value>
                <value>
                    <fullName>ニッセイ同和損害保険株式会社</fullName>
                </value>
                <value>
                    <fullName>あいおい損害保険株式会社</fullName>
                </value>
                <value>
                    <fullName>日本興亜損害保険株式会社</fullName>
                </value>
                <value>
                    <fullName>ニッセイ同和損害保険株式会社(JI)</fullName>
                </value>
                <value>
                    <fullName>日立 Health Care Program</fullName>
                </value>
                <value>
                    <fullName>エース損害保険株式会社</fullName>
                </value>
                <value>
                    <fullName>三井住友海上保険株式会社</fullName>
                </value>
                <value>
                    <fullName>三井住友海上火災保険（香港)有限公司</fullName>
                </value>
                <value>
                    <fullName>株式会社損害保険ジャパン</fullName>
                </value>
                <value>
                    <fullName>株式会社損害保険ジャパン　香港支店</fullName>
                </value>
                <value>
                    <fullName>東京海上火災保険（香港）有限公司</fullName>
                </value>
                <value>
                    <fullName>ニュ－インディア保険会社</fullName>
                </value>
                <value>
                    <fullName>平安人寿保険</fullName>
                </value>
                <value>
                    <fullName>三井住友海上火災保険公司　上海分公司</fullName>
                </value>
                <value>
                    <fullName>三菱東京UFJ Health Care Program</fullName>
                </value>
                <value>
                    <fullName>広電日生健康衛士</fullName>
                </value>
                <value>
                    <fullName>American International Underwriters,Limited</fullName>
                </value>
                <value>
                    <fullName>平安養老保険</fullName>
                </value>
                <value>
                    <fullName>三井住友海上火災保険株式会社</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OtaNote__c</fullName>
        <label>OTA備考</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RescueCost__c</fullName>
        <label>救援者費用</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ShokenGetSituation__c</fullName>
        <label>証券入手状況</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>未入手</fullName>
                </value>
                <value>
                    <fullName>取寄中</fullName>
                </value>
                <value>
                    <fullName>入手済</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ShokenNo__c</fullName>
        <label>証券番号</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shonendo_Shiki__c</fullName>
        <label>初年度始期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Temp_FamilyNo__c</fullName>
        <label>Temp FamilyNo</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Temp_Import_Flag__c</fullName>
        <label>Temp Import Flag</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Temp_MemberNo__c</fullName>
        <label>Temp_MemberNo</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TreatmentCost__c</fullName>
        <label>治療費用</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TreatmentRescueCost__c</fullName>
        <label>治療・救援者費用</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>保険履歴</label>
    <listViews>
        <fullName>Temp</fullName>
        <columns>NAME</columns>
        <columns>OtaName__c</columns>
        <columns>MemberName__c</columns>
        <columns>MemberFamilyName__c</columns>
        <columns>ShokenNo__c</columns>
        <columns>Temp_MemberNo__c</columns>
        <columns>Temp_FamilyNo__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Temp_Import_Flag__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Temp_Import_Flag__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>MemberName__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>MemberFamilyName__c</field>
            <operation>equals</operation>
        </filters>
        <label>Temp (for import test)</label>
    </listViews>
    <listViews>
        <fullName>View</fullName>
        <columns>NAME</columns>
        <columns>OtaName__c</columns>
        <columns>MemberName__c</columns>
        <columns>MemberFamilyName__c</columns>
        <columns>ShokenNo__c</columns>
        <columns>ShokenGetSituation__c</columns>
        <columns>OtaKeepPlace__c</columns>
        <columns>OtaInsuranceShiki__c</columns>
        <columns>OtaInsuranceShuki__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
        <language>ja</language>
    </listViews>
    <nameField>
        <displayFormat>I{0000000000}</displayFormat>
        <label>保険履歴番号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>